<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E90FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dusrabank.HomeActivity$PlaceholderFragment" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="25dp" 
            android:layout_marginBottom="20dp"/>
        
	   <Button 
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/account_view"
	       android:id="@+id/view_account"
	       android:background="#02a8f3"
	       android:textColor="#ffffffff"
	       android:textStyle="bold"
	       android:layout_margin="5dp"
	       android:onClick="viewAccountSummary"
	       android:drawableTop="@drawable/ic_account_balance_white_48dp"
	       />
	   
	   <Button 
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/funds_transfer"
	       android:id="@+id/transfer_funds"
	       android:background="#02a8f3"
	       android:textColor="#ffffffff"
	       android:textStyle="bold"
	       android:layout_margin="5dp"
	       android:onClick="fundsTransfer"
	       android:drawableTop="@drawable/ic_attach_money_white_48dp"
	       />
	   
	   <Button 
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/appointment_book"
	       android:id="@+id/book_appointment"
	       android:background="#02a8f3"
	       android:textColor="#ffffffff"
	       android:textStyle="bold"
	       android:layout_margin="5dp"
	       android:onClick="bookAppointment"
	       android:drawableTop="@drawable/ic_perm_contact_calendar_white_48dp"
	       />
	   
	    <Button 
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/request_place"
	       android:id="@+id/place_request"
	       android:background="#02a8f3"
	       android:textColor="#ffffffff"
	       android:textStyle="bold"
	       android:layout_margin="5dp"
	       android:onClick="placeRequest"
	       android:drawableTop="@drawable/ic_receipt_white_48dp"
	       />
</LinearLayout>
