<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#1E90FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_summary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textSize="25sp"   
        android:layout_marginBottom="40dp"     
        />
    
    <LinearLayout 
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:background="#02a8f3"
        android:layout_marginBottom="20dp">
        
        <TextView
        	android:layout_width="@dimen/default_element_width"
            android:layout_height="@dimen/default_element_height"
            android:text="@string/savings_balance"
            android:textColor="#ffffffff"
	        android:textStyle="bold"
	        android:gravity="center_vertical"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:drawableStart="@drawable/ic_attach_money_white_48dp"/>

        <EditText
            android:id="@+id/savings_balance"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_element_height"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:hint="@string/savings_hint"
            android:textColor="#ffffffff"
            android:textStyle="bold" >
	       </EditText>
            
        </LinearLayout>
        
    <LinearLayout 
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:background="#02a8f3"
        android:layout_marginBottom="20dp">
        
        <TextView
        	android:layout_width="@dimen/default_element_width"
            android:layout_height="@dimen/default_element_height"
            android:text="@string/credit_amount"
            android:textColor="#ffffffff"
	        android:textStyle="bold"
	        android:gravity="center_vertical"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:drawableStart="@drawable/ic_attach_money_white_48dp"/>

        <EditText
            android:id="@+id/credit_balance"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_element_height"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:hint="@string/credit_hint"
            android:textColor="#ffffffff"
            android:textStyle="bold" >
	       </EditText>
            
        </LinearLayout>
        
    <LinearLayout 
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:background="#02a8f3">
        
        <TextView
        	android:layout_width="@dimen/default_element_width"
            android:layout_height="@dimen/default_element_height"
            android:text="@string/current_account"
            android:textColor="#ffffffff"
	        android:textStyle="bold"
	        android:gravity="center_vertical"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:drawableStart="@drawable/ic_attach_money_white_48dp"/>

        <EditText
            android:id="@+id/current_balance"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_element_height"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:hint="@string/current_hint"
            android:textColor="#ffffffff"
            android:textStyle="bold" >
	       </EditText>
            
        </LinearLayout>
    
    </LinearLayout>