<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#02a8f3"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    
    
        <Button 
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:drawableTop="@drawable/ic_lock_outline_white_48dp"
            android:background="#1E90FF"
            android:layout_marginBottom="20dp"
            android:onClick="preLogin"
            />
        
        <Button 
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_appointment"
            android:drawableTop="@drawable/ic_perm_contact_calendar_white_48dp"
            android:background="#1E90FF"
            android:layout_marginBottom="20dp"
            android:onClick="bookAppointment"
            />
        
        <Button 
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtual_assistant"
            android:drawableTop="@drawable/ic_assistant_white_48dp"
            android:background="#1E90FF"
            android:onClick="virtualAssistant"
            
            />
        
    
    
    
    

</LinearLayout>
