<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/card_background"
        android:contentDescription="@string/img_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:clickable="true">
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="32dp"
            />
        <TextView
            android:id="@+id/card_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="40dp"
            />
        <EditText
            android:id="@+id/card_account_field"
            android:width="360dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="42dp"
            android:singleLine="true"
            android:inputType="number" />
        
        <TextView
            android:id="@+id/account_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_password"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="40dp"
            />
        
        <EditText 
        	android:id="@+id/password"
        	        android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:imeOptions="actionUnspecified"
            		android:inputType="textPassword"
            		android:maxLines="1"
            		android:singleLine="true"
            		android:layout_marginBottom="10dp"
            		android:textColorHint="#ffffffff"
            		android:textColor="#ffffffff"
        	        />
        	    <Button 
        	        android:id="@+id/email_sign_in_button"
        	        android:layout_width="match_parent"
        	        android:layout_height="wrap_content"
        	        android:layout_marginTop="15dp"
        	        android:text="@string/action_sign_in_button"
        	        android:textStyle="bold"
        	        android:textColor="#ffffffff"
        	        android:background="#0C25B0"
        	        android:onClick="onLogin"
        	        
        	        />
    </LinearLayout>
</FrameLayout>